tests/ui/suggestions/call-boxed.stderr
error[E0308]: mismatched types
  --> $DIR/call-boxed.rs:4:9
   |
LL |     let mut x = 1i32;
   |                 ---- expected due to this value
LL |     let y = Box::new(|| 1);
   |                      -- the found closure
LL |     x = y;
   |         ^ expected `i32`, found `Box<[closure@call-boxed.rs:3:22]>`
   |
   = note: expected type `i32`
            found struct `Box<[closure@$DIR/call-boxed.rs:3:22: 3:24]>`
help: use parentheses to call this closure
   |
LL |     x = y();
   |          ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
